Fixed spacing issue.

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -7906,7 +7906,7 @@ h1, h2, h3, h4, h5,
 .times-entry {
   width: 100%;
   display: block;
-  margin-bottom: 30px; }
+  margin-bottom: 22px; }
   .times-entry .text {
     width: 100%;
     display: block;
